# KontieinierShifrovaniiaRoshchinaKp-23-17

./: .replit  deploy.sh  pyproject.toml  test_https_modification.py
ansible/: ansible.cfg  deploy_playbook.yml
csv_exports/: attacker_log.csv  encryption_log.csv
django_project/: asgi.py  settings.py  urls.py
tasks/: views.py
tasks/templates/encryption_app/: index.html
