
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "encryption-container"
version = "2.0.0"
description = "Модуль сквозного шифрования трафика ТСД с веб-интерфейсом на Django"

[tool.poetry.dependencies]
python = ">=3.11"
django = "^4.2"
matplotlib = "^3.8"
numpy = "^1.26"
cryptography = "^41.0"
django-sslserver = "^0.22"